--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -2,14 +2,14 @@
  <img src="{{product.pictureUrl}}" alt="{{product.name}}" class="bg-light">
 
   <div class="card-body">
-    <a href="#">
+    <a [routerLink]="['/shop/', product.id]" >
       <h6 class="text-uppercase">{{product.name}}</h6>
     </a>
     <span class="mb-3 me-2">{{product.price | currency}}</span>
   
     <div class="btn-group mt-2">
       <button type="button" class="btn btn-sm btn-outline-secondary fa fa-shopping-cart me-2"></button>
-      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+      <button [routerLink]="['/shop/',product.id]" routerLinkActive="router-link-active"  type="button" class="btn btn-sm btn-outline-secondary">View</button>
     </div>
   </div>
 </div>
