--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -4,7 +4,7 @@
   <nav class="my-2 my-md-0 mr-md-3 text-uppercase" style="font-size: larger;">
     <a class="me-3 py-2 text-decoration-none" [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
     <a class="me-3 py-2 text-decoration-none" [routerLink]="['/shop']" routerLinkActive="active">Shop</a>
-    <a class="me-3 py-2 text-decoration-none" href="#">Contact</a>
+    <a class="me-3 py-2 text-decoration-none" [routerLink]="['/test-error']" routerLinkActive="active">Errors</a>
   </nav>
   <div class="d-flex align-items-center">
     <a class="position-relative">
