--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -2,7 +2,6 @@
   <h3>Loading...</h3>
 </ngx-spinner>
 <app-nav-bar></app-nav-bar>
-<app-section-header></app-section-header>
-<div class="container">
+<div class="container" style="margin-top:140px">
   <router-outlet></router-outlet>
 </div>
