--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -1,15 +1,15 @@
 <div class="card h-100 shadow-sm">
-  <div class="image position-relative" style="cursor: pointer;">
-    <img src="{{product.pictureUrl}}" alt="{{product.name}}" class="bg-light img-fluid">
-    <div class="d-flex align-items-center justify-content-center hover-overlay">
-      <button type="button" class="btn btn-lg btn-outline-secondary fa fa-shopping-cart me-2"></button>
-      <button [routerLink]="['/shop/',product.id]" routerLinkActive="router-link-active"  type="button" class="btn btn-lg btn-outline-secondary">View</button>
-    </div>
-  </div>
+ <img src="{{product.pictureUrl}}" alt="{{product.name}}" class="bg-light">
+
   <div class="card-body">
     <a [routerLink]="['/shop/', product.id]" >
       <h6 class="text-uppercase">{{product.name}}</h6>
     </a>
     <span class="mb-3 me-2">{{product.price | currency}}</span>
+  
+    <div class="btn-group mt-2">
+      <button type="button" class="btn btn-sm btn-outline-secondary fa fa-shopping-cart me-2"></button>
+      <button [routerLink]="['/shop/',product.id]" routerLinkActive="router-link-active"  type="button" class="btn btn-sm btn-outline-secondary">View</button>
+    </div>
   </div>
 </div>
