--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,7 @@
+<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-scale-multiple" [fullScreen] = "true"><p style="color: white" > Loading... </p></ngx-spinner>
+
 <app-nav-bar></app-nav-bar>
 <app-section-header></app-section-header>
-<div class="container">
+<div>
   <router-outlet></router-outlet>
 </div>
