--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -1,34 +1,36 @@
 <div class="container mt-5">
   <div class="row">
     <section class="col-3">
-      <h5 class="text-warning ms-3">Sort</h5>
-      <select class="form-select mb-3" (change)="onSortSelected($event.target.value)">
-        <option *ngFor="let sort of sortOptions"
-          [value]="sort.value">
-          {{sort.name}}
-      </option>
-      </select>
-      <h5 class="text-warning ms-3">Brands</h5>
-      <ul class="list-group mb-3">
-        <li class="list-group-item" *ngFor="let brand of brands"
-        [class.active]="brand.id === this.shopParams.brandId"
-        [value]="brand.id"
-        (click)="onBrandSelected(brand.id)">
-          {{brand.name}}
-        </li>
-      </ul>
-      <h5 class="text-warning ms-3">Types</h5>
-      <ul class="list-group">
-        <li class="list-group-item" *ngFor="let type of types"
-        [class.active]="type.id === this.shopParams.typeId"
-        [value]="type.id"
-        (click)="onTypeSelected(type.id)">
-          {{type.name}}
-        </li>
-      </ul>
+      <ng-container *ngIf="types && brands">
+        <h5 class="text-warning ms-3 mt-3">Sort</h5>
+        <select class="form-select mb-3" (change)="onSortSelected($event.target.value)">
+          <option *ngFor="let sort of sortOptions"
+            [value]="sort.value">
+            {{sort.name}}
+        </option>
+        </select>
+        <h5 class="text-warning ms-3">Brands</h5>
+        <ul class="list-group mb-3">
+          <li class="list-group-item" *ngFor="let brand of brands"
+          [class.active]="brand.id === this.shopParams.brandId"
+          [value]="brand.id"
+          (click)="onBrandSelected(brand.id)">
+            {{brand.name}}
+          </li>
+        </ul>
+        <h5 class="text-warning ms-3">Types</h5>
+        <ul class="list-group">
+          <li class="list-group-item" *ngFor="let type of types"
+          [class.active]="type.id === this.shopParams.typeId"
+          [value]="type.id"
+          (click)="onTypeSelected(type.id)">
+            {{type.name}}
+          </li>
+        </ul>
+      </ng-container>
     </section>
 
-    <section class="col-9">
+    <section class="col-9" *ngIf="products">
       <div class="d-flex justify-content-between align-items-center pb-2">
 
        <app-paging-header
