--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -11,8 +11,34 @@
       <i class="fa fa-shopping-cart fa-2x me-5 text-dark"></i>
       <div *ngIf="(basket$ | async) as basket" class="cart-no">{{basket.items?.length}}</div>
     </a>
-    <a class="btn btn-outline-secondary me-2" href="#">Login</a>
-    <a class="btn btn-outline-secondary me-3" href="#">Sign up</a>
+    <ng-container *ngIf="(currentUser$ | async) === null">
+      <a routerLink="/account/login" class="btn btn-outline-secondary me-2" href="#">Login</a>
+      <a routerLink="/account/register" class="btn btn-outline-secondary me-3" href="#">Sign up</a>
+    </ng-container>
+    <ng-container *ngIf="currentUser$ | async">
+      <div class="dropdown ml-3mr-5" dropdown>
+        <a style="cursor: pointer;" class="dropdown-toggle text-decoration-none" dropdownToggle>
+          <strong>
+            Welcome {{(currentUser$ | async)?.displayName}}
+          </strong>
+        </a>
+        <div class="dropdown-menu dropdown-menu-right" style="cursor: pointer;" *dropdownMenu>
+          <a routerLink="/basket" class="dropdown-item d-flex align-items-center py-2">
+            <i class="fa fa-shopping-cart me-3"></i> View Basket
+          </a>
+          <a routerLink="/orders" class="dropdown-item d-flex align-items-center py-2">
+            <i class="fa fa-history me-3"></i> View Orders
+          </a>
+          <div class="dropdown-divider"></div>
+          <a (click)="logout()" class="dropdown-item d-flex align-items-center py-2">
+            <i class="fa fa-sign-out me-3"></i> Logout
+          </a>
+        </div>
+      </div>
+    </ng-container>
+    <ng-container *ngIf="currentUser$ | async">
+      <a href="#"></a>
+    </ng-container>
   </div>
   
 </div>
