--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -2,7 +2,7 @@
   <div class="image position-relative" style="cursor: pointer;">
     <img src="{{product.pictureUrl}}" alt="{{product.name}}" class="bg-light img-fluid">
     <div class="d-flex align-items-center justify-content-center hover-overlay">
-      <button (click)="addItemToBasket()" type="button" class="btn btn-lg btn-outline-secondary fa fa-shopping-cart me-2"></button>
+      <button (click)="addItemToBasket()" type="button" class="btn btn-lg btn-outline-secondary fa fa-shopping-cart me-2 skinet-button"></button>
       <button [routerLink]="['/shop/',product.id]" routerLinkActive="router-link-active"  type="button" class="btn btn-lg btn-outline-secondary">View</button>
     </div>
   </div>
